# PhyloStage

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: AML.ipynb  TRACERx.ipynb  boxplot.py  dataset_summaries.ipynb  final_results_significance.ipynb  simulations.ipynb
code/phylostage/: final_functions.py
data/: tracerx_lung_phylogenies.txt
notebooks/: AML.ipynb  Simulation-Results.ipynb  TRACERx-Results.ipynb  TRACERx.ipynb  dataset_summaries.ipynb  final_results_significance.ipynb  simulations.ipynb
outputs/AML/: summary.csv  summary_prev.csv  summary_prev_2.csv
outputs/AML/1_stages_0_min_alt_freq_1_mapp/: log.txt  patient_stages.csv
outputs/AML/1_stages_0_min_alt_freq_2_mapp/: log.txt
outputs/AML/1_stages_0_min_alt_freq_3_mapp/: log.txt  patient_stages.csv
outputs/AML/1_stages_0_min_alt_freq_5_mapp/: log.txt  patient_stages.csv
outputs/AML/1_stages_0_min_alt_freq_None_mapp/: log.txt  patient_stages.csv
outputs/AML/1_stages_10_min_alt_freq_None_mapp/: log.txt  patient_stages.csv
outputs/AML/1_stages_2_min_alt_freq_3_mapp/: log.txt
outputs/AML/1_stages_2_min_alt_freq_5_mapp/: log.txt
outputs/AML/1_stages_2_min_alt_freq_None_mapp/: log.txt
outputs/AML/1_stages_3_min_alt_freq_3_mapp/: log.txt
outputs/AML/1_stages_3_min_alt_freq_5_mapp/: log.txt
outputs/AML/1_stages_3_min_alt_freq_None_mapp/: log.txt
outputs/AML/1_stages_4_min_alt_freq_1_mapp/: log.txt
outputs/AML/1_stages_None_mapp/: log.txt
outputs/simulations/: summary.csv  summary_1_5.csv  summary_2.csv  summary_6_20.csv  summary_with_mastro.csv
outputs/tracerx/: summary.csv
(+853 files in other folders)
